[package]
name = "fdkey"
version = "0.1.0"
edition = "2021"
description = "FDKEY verification primitives for MCP servers and HTTP backends — gate AI-agent access behind LLM-only puzzles."
license = "MIT"
repository = "https://github.com/fdkey/mcp-sdks"
homepage = "https://fdkey.com"
documentation = "https://docs.rs/fdkey"
readme = "README.md"
keywords = ["mcp", "ai-agent", "verification", "captcha", "fdkey"]
categories = ["api-bindings", "authentication", "web-programming"]
rust-version = "1.75"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "macros"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2.1", features = ["pkcs8", "pem", "rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
pkcs8 = { version = "0.10", features = ["pem"] }
wiremock = "0.6"
